# sns-ring-model

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
mad/outputs/: lattice
madx/: clean.sh  sns_ring.lat  sns_ring.mad
madx/.ipynb_checkpoints/: convert_tunes-checkpoint.py  sns_ring-checkpoint.madx
madx/outputs/: lattice  madx.ps  optics  optics_for_G4BL  twiss
scripts/: README.md
scripts/full_injection/: config.yaml  track.py  utils.py
scripts/full_injection_benchmark/: track.py  utils.py
sns_ring_model/: __init__.py  build_aperture_database.py  injection.py  model.py  utils.py
sns_ring_model/data/: aperture_node_info.txt
sns_ring_model/mad/: sns_ring_mad.lat
sns_ring_model/madx/: convert_tunes.py  sns_ring.madx
sns_ring_model/madx/inputs/: sns_ring_solenoid.lat
sns_ring_model/madx/outputs/sns_ring_nux-6.24_nuy-6.16/: madx.ps  optics  optics_for_G4BL  twiss
tests/: test_models.py
